Added confetti and updated code to allow for api call to flask backend

--- a/public/index.html
+++ b/public/index.html
@@ -5,4 +5,13 @@
 
     </div>
   </body>
+  <script src="./confetti.js-master/confetti.js"></script>
+  <script>
+    const startConfetti = () => {
+      setTimeout(function() {
+        confetti.start();
+      }, 1000);
+    }
+    startConfetti();
+  </script>
 </html>
