Switching up the colors

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     </div>
   </body>
-  <script src="./confetti.js-master/confetti.js"></script>
+  <!-- <script src="./confetti.js-master/confetti.js"></script>
   <script>
     const startConfetti = () => {
       setTimeout(function() {
@@ -13,5 +13,5 @@
       }, 1000);
     }
     startConfetti();
-  </script>
+  </script> -->
 </html>
