Added random images, login/logout pages, and UI updates

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,9 @@
 
     </div>
   </body>
-  <!-- <script src="./confetti.js-master/confetti.js"></script>
+
   <script>
-    const startConfetti = () => {
-      setTimeout(function() {
-        confetti.start();
-      }, 1000);
-    }
-    startConfetti();
-  </script> -->
-  <script>
-    // Close the dropdown if the user clicks outside of it
+    /* A special script that allows the drop down button to show */
     window.onclick = function(event) {
       if (!event.target.matches('.dropbtn')) {
         var dropdowns = document.getElementsByClassName("dropdown-content");
